# gci_pico

./: .gitignore  CMakeLists.txt  flash_pico.sh  format-code.sh  readme.md
dev/: CMakeLists.txt  dma-serial.c
examples/: CMakeLists.txt  adc-example.c  gps-serial.c  i2c_scan.c  pwm-example.c  pwm.c  serial.c  serial_pio.c  spi.c  uart-example.c
gtests/: CMakeLists.txt  gtests.cpp
scruffy/: CMakeLists.txt  picotests.c
src/: adc.c  adc.h  fifo.c  fifo.h  i2c.c  i2c.h  interrupts.c  linked_list.c  picolibc.h  pwm.c  rtc.c  rtc.h  spi.c  spi.h  typedefs.h  uart.c  uart.h  units.h  usb.c  usb.h  watchdog.h
src/gci_pico/: adc.h  fifo.h  gci_pico.h  i2c.h  interrupts.h  linked_list.h  pwm.h  spi.h  typedefs.h  uart.h  units.h  usb.h  watchdog.h
